--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,21 @@
-<% @items.each do |item| %>
+<h1 class='welcome col-xs-10 col-xs-offset-1'> Welcome to the hub for all of my favorite movies, TV shows, books and music! </h1>
+
+<div class="content-box col-xs-6">
+  <h2> Music </h2>
+    <p>
+
+    </p>
+</div>
+
+<div class="content-box col-xs-6">
+  <h2> Movies </h2>
+    <p>
+
+    </p>
+</div>
+<!-- <% @items.each do |item| %>
   <div>
     <h1> <%= item.title %> </h1>
     <p> <%= item.content %> </p>
   </div>
-<% end %>
+<% end %> -->
