added more to the home page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,18 +1,40 @@
 <h1 class='welcome col-xs-10 col-xs-offset-1'> Welcome to the hub for all of my favorite movies, TV shows, books and music! </h1>
 
-<div class="content-box col-xs-6">
-  <h2> Music </h2>
-    <p>
+    <div class="clear"></div>
 
-    </p>
-</div>
+<br /><br /><br /><br />
 
-<div class="content-box col-xs-6">
-  <h2> Movies </h2>
-    <p>
+  <div class="content-box col-xs-4 col-xs-offset-1">
+    <h2> Music </h2>
+      <p>
 
-    </p>
-</div>
+      </p>
+  </div>
+
+  <div class="content-box col-xs-4 col-xs-offset-2">
+    <h2> Movies </h2>
+      <p>
+
+      </p>
+  </div>
+
+  <div class="clear"></div>
+
+<br /><br /><br /><br />
+
+  <div class="content-box col-xs-4 col-xs-offset-1">
+    <h2> TV Shows </h2>
+      <p>
+
+      </p>
+  </div>
+
+  <div class="content-box col-xs-4 col-xs-offset-2">
+    <h2> Books </h2>
+      <p>
+
+      </p>
+  </div>
 <!-- <% @items.each do |item| %>
   <div>
     <h1> <%= item.title %> </h1>
