Added movies page/table/controller and added feature to add new movies with simple_form..Also added Devise

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,17 +1,19 @@
-<h1 class='welcome col-xs-10 col-xs-offset-1'> Welcome to the hub for all of my favorite movies, TV shows, books and music! </h1>
+<h1 class='welcome col-xs-10 col-xs-offset-1 text-center'>
+  Welcome to the hub for all of my favorite movies, TV shows, books and music!
+</h1>
 
     <div class="clear"></div>
 
 <br /><br /><br /><br />
 
-  <div class="content-box col-xs-4 col-xs-offset-1">
+  <div class="content-box col-xs-4 col-xs-offset-1 text-center">
     <h2> Music </h2>
       <p>
 
       </p>
   </div>
 
-  <div class="content-box col-xs-4 col-xs-offset-2">
+  <div class="content-box col-xs-4 col-xs-offset-2 text-center">
     <h2> Movies </h2>
       <p>
 
@@ -22,14 +24,14 @@
 
 <br /><br /><br /><br />
 
-  <div class="content-box col-xs-4 col-xs-offset-1">
+  <div class="content-box col-xs-4 col-xs-offset-1 text-center">
     <h2> TV Shows </h2>
       <p>
 
       </p>
   </div>
 
-  <div class="content-box col-xs-4 col-xs-offset-2">
+  <div class="content-box col-xs-4 col-xs-offset-2 text-center">
     <h2> Books </h2>
       <p>
 
