--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Dasstoni Media Library</a>
+        <%= link_to 'Dasstoni Media Library', root_path, class: 'navbar-brand' %>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -28,24 +28,37 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Library <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Music</a></li>
+              <li> <%= link_to 'Music', '#' %> </li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Movies</a></li>
+              <li><%= link_to 'Movies', '#' %></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">TV Shows</a></li>
+              <li><%= link_to 'TV Shows', '#' %></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Books</a></li>
+              <li><%= link_to 'Books', '#' %></li>
             </ul>
           </li>
-
-          <li><a href="#">Link</a></li>
-
+          <% if current_user %>
+            <!-- <li> <%= current_user.email %>.</li> -->
+            <li> <%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li> <%= link_to "Sign In", new_user_session_path %> </li>
+            <li> <%= link_to "Sign Up", new_user_registration_path %> </li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 
+  <% if notice.present? %>
+    <p class="alert alert-info"><%= notice %></p>
+  <% end %>
+  <% if alert.present? %>
+    <p class="alert alert-danger"><%= alert %></p>
+  <% end %>
+
 <%= yield %>
+
+
 
 </body>
 </html>
