Adjusted styling and added movies path to navbar and to home page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,7 +14,7 @@
   </div>
 
   <div class="content-box col-xs-4 col-xs-offset-2 text-center">
-    <h2> Movies </h2>
+    <h2> <%=link_to 'Movies', movies_path %> </h2>
       <p>
 
       </p>
