--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <ul class="dropdown-menu">
               <li> <%= link_to 'Music', '#' %> </li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to 'Movies', '#' %></li>
+              <li><%= link_to 'Movies', movies_path %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to 'TV Shows', '#' %></li>
               <li role="separator" class="divider"></li>
