--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,13 @@
-<h1 class = 'content-box col-xs-10 col-xs-offset-1 text-center'>
-   Movies
- </h1>
+
+<div class = 'content-box col-xs-8 col-xs-offset-2 text-center'>
+<h1> Movies </h1>
+  <br  />
+  <%= link_to 'Add New Movie', new_movie_path, class: 'btn btn-primary' %>
+</div>
+
+<br class='clear'/>
+
+<br />
 
 <% @movies.each do |movie| %>
   <div class='content-box col-xs-8 col-xs-offset-2'>
